--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ const validCredentials={
 };
 const kodeMapping={
  "B12345":"soal1.json","A09008":"soal2.json","SAREWAE":"soal5.json",
- "W11765":"soal3.json","H66633":"soal4.json"
+ "W11765":"soal3.json","H66633":"test.json"
 };
 const BASE="https://raw.githubusercontent.com/airnetcso/latbakor/main/soal/";
 
@@ -239,3 +239,4 @@ function startTimer(){
 </script>
 </body>
 </html>
+
