--- a/index.html
+++ b/index.html
@@ -126,8 +126,11 @@ const validCredentials={
  "Hamdan106":"Fukuo106","koreafan":"hanguk789","topik2026":"seoul2026"
 };
 const kodeMapping={
- "B12345":"soal1.json","A09008":"soal2.json","SAREWAE":"soal5.json",
- "W11765":"soal3.json","H66633":"test.json"
+ "B12345":"soal1.json",
+ "A09008":"soal2.json",
+ "SAREWAE":"test.json",
+ "W11765":"soal3.json",
+ "H66633":"soal5.json"
 };
 const BASE="https://raw.githubusercontent.com/airnetcso/latbakor/main/soal/";
 
@@ -239,4 +242,5 @@ function startTimer(){
 </script>
 </body>
 </html>
+
 
