--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="id">
 <head>
@@ -6,125 +7,27 @@
 <title>TEST BAHASA KOREA</title>
 
 <style>
-@keyframes fadeIn {
-  from { opacity: 0; transform: translateY(20px); }
-  to   { opacity: 1; transform: translateY(0); }
-}
+body{margin:0;font-family:'Segoe UI',Arial;background:#f5f5f5}
 
-html, body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
+/* LOGIN */
+#login-page{
+ min-height:100vh;
+ display:flex;
+ justify-content:center;
+ align-items:center;
+ background:linear-gradient(rgba(0,0,0,.6),rgba(0,0,0,.6)),
+ url('https://raw.githubusercontent.com/airnetcso/eps/main/image/bg1.jpg') center/cover no-repeat;
 }
-
-body {
-  font-family: 'Segoe UI', system-ui, Arial, sans-serif;
-  min-height: 100vh;
-  background: url('https://raw.githubusercontent.com/airnetcso/eps/main/image/bg1.jpg') no-repeat center center fixed;
-  background-size: cover;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 20px;
-  color: #fff;
-  position: relative;
+.login-container{
+ width:90%;max-width:280px;padding:35px;text-align:center;
+ background:rgba(255,255,255,.12);
+ backdrop-filter:blur(6px);
 }
+.login-container h1,.login-container p{color:#fff}
+input{width:88%;padding:14px;margin:10px 0}
+button{width:100%;padding:16px;background:#3f51b5;color:#fff;border:none;font-weight:bold}
 
-body::before {
-  content: '';
-  position: absolute;
-  inset: 0;
-  background: rgba(0, 0, 0, 0.3);
-  z-index: 1;
-}
-
-/* LOGIN PAGE - Mirip Koka */
-.login-container {
-  position: relative;
-  z-index: 2;
-  width: 80%;
-  max-width: 440px;
-  background: rgba(255,255,255,0.15);
-  backdrop-filter: blur(14px);
-  -webkit-backdrop-filter: blur(14px);
-  border-radius: 24px;
-  padding: 40px 30px;
-  box-shadow: 0 15px 40px rgba(0,0,0,0.35);
-  border: 1px solid rgba(255,255,255,0.18);
-  animation: fadeIn 0.8s ease-out;
-  margin-top: -100px;
-  text-align: center;
-}
-
-.login-container h1 {
-  font-size: 32px;
-  margin: 0 0 10px;
-  color: #fff;
-  font-weight: 700;
-  text-shadow: 0 2px 8px rgba(0,0,0,0.6);
-}
-
-.login-container p {
-  margin: 0 0 30px;
-  font-size: 18px;
-}
-
-input {
-  width: 100%;
-  padding: 16px;
-  margin: 14px 0;
-  font-size: 18px;
-  border: 2px solid rgba(255,255,255,0.4);
-  border-radius: 12px;
-  box-sizing: border-box;
-  background: rgba(255,255,255,0.12);
-  color: white;
-  transition: all 0.3s ease;
-}
-
-input::placeholder {
-  color: rgba(255,255,255,0.7);
-}
-
-input:focus {
-  border-color: #fff;
-  background: rgba(255,255,255,0.22);
-  outline: none;
-  box-shadow: 0 0 0 4px rgba(255,255,255,0.15);
-}
-
-button {
-  width: 100%;
-  padding: 16px;
-  margin: 16px 0 8px;
-  font-size: 20px;
-  font-weight: bold;
-  border: none;
-  border-radius: 12px;
-  color: white;
-  cursor: pointer;
-  background: linear-gradient(90deg, #3b82f6, #2563eb);
-  transition: all 0.3s ease;
-}
-
-button:hover {
-  transform: translateY(-3px);
-  box-shadow: 0 12px 25px rgba(59,130,246,0.4);
-}
-
-.error {
-  color: #ff6b6b;
-  text-align: center;
-  margin: 12px 0;
-  font-weight: 600;
-  background: rgba(0,0,0,0.4);
-  padding: 10px;
-  border-radius: 10px;
-}
-
-/* QUIZ PAGE - Tetap seperti asli */
+/* QUIZ */
 #quiz-page{display:none;min-height:100vh;padding:70px 0;background:linear-gradient(#fdf6ec,#f7efe2)}
 .header-fixed{
  position:fixed;top:0;width:100%;display:flex;gap:6px;
@@ -177,22 +80,18 @@ button:hover {
 
 <body>
 
-<!-- LOGIN PAGE (UI baru mirip koka + ID login-page dikembalikan) -->
-<div class="login-container" id="login-page">
-  <h1>LATIHAN SOAL</h1>
-  <h1>한국어연습</h1>
-  <p>25 Soal | 50 Menit</p>
-
-  <input id="username" placeholder="Username / 이름" autocomplete="off">
-  <input id="password" type="password" placeholder="Password / 비밀번호" autocomplete="off">
-  <input id="kode" placeholder="Kode Soal / 시험코드" autocomplete="off">
-
-  <div class="error" id="errorMsg"></div>
-
-  <button id="btnLogin">LOGIN / 로그인</button>
+<div id="login-page">
+ <div class="login-container">
+ <h1>LATIHAN SOAL</h1>
+ <h1>한국어연습</h1>
+ <p>25 Soal | 50 Menit</p>
+ <input id="username" placeholder="Username / 이름">
+ <input id="password" type="password" placeholder="Password / 비밀번호">
+ <input id="kode" placeholder="Kode Soal / 시험코드">
+ <button id="btnLogin">LOGIN / 로그인</button>
+ </div>
 </div>
 
-<!-- QUIZ PAGE (tetap seperti asli) -->
 <div id="quiz-page">
  <div class="header-fixed">
  <div class="submit-top" id="submitTop">SUBMIT</div>
@@ -205,7 +104,6 @@ button:hover {
  </div>
 </div>
 
-<!-- RESULT PAGE -->
 <div id="result-page">
  <div class="result-box" id="resultBox"></div>
 </div>
@@ -229,8 +127,11 @@ const validCredentials={
  "Hamdan106":"Fukuo106","koreafan":"hanguk789","topik2026":"seoul2026"
 };
 const kodeMapping={
- "B12345":"soal1.json","A09008":"soal2.json","SAREWAE":"soal5.json",
- "W11765":"soal3.json","H66633":"soal4.json"
+ "B12345":"soal1.json",
+ "A09008":"soal2.json",
+ "SAREWAE":"test.json",
+ "W11765":"soal3.json",
+ "H66633":"soal5.json"
 };
 const BASE="https://raw.githubusercontent.com/airnetcso/latbakor/main/soal/";
 
@@ -309,27 +210,18 @@ submitTop.onclick=()=>{
    </div>`;
  });
 
- // === PENGIRIMAN NILAI KE ADMIN PUSAT (DIPERKUAT & DIPERBAIKI) ===
+ // KIRIM KE ADMIN PUSAT
  const resultData = {
   username: currentUser,
-  kode: currentKode || "-",
+  kode: currentKode,
   nilai: score,
   tanggal: new Date().toLocaleString('id-ID'),
   app: "latbakor"
  };
 
  let allResults = JSON.parse(localStorage.getItem("quizResults") || "[]");
-
- // Check duplikat lebih ketat
- const isDuplicate = allResults.some(r => 
-  r.username === resultData.username &&
-  r.kode === resultData.kode &&
-  r.nilai === resultData.nilai &&
-  r.app === resultData.app &&
-  Math.abs(new Date(r.tanggal) - new Date(resultData.tanggal)) < 60000 // kurang dari 1 menit
- );
-
- if (!isDuplicate) {
+ const duplicate = allResults.some(r => r.username === resultData.username && r.kode === resultData.kode && r.nilai === resultData.nilai && r.app === "latbakor");
+ if(!duplicate){
   allResults.push(resultData);
   localStorage.setItem("quizResults", JSON.stringify(allResults));
  }
@@ -351,3 +243,5 @@ function startTimer(){
 </script>
 </body>
 </html>
+
+
