--- a/index.html
+++ b/index.html
@@ -4,26 +4,108 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>TEST BAHASA KOREA</title>
+
 <style>
-body{margin:0;font-family:'Segoe UI',Arial;background:#f5f5f5}
-/* LOGIN */
-#login-page{
- min-height:100vh;
- display:flex;
- justify-content:center;
- align-items:center;
- background:linear-gradient(rgba(0,0,0,.6),rgba(0,0,0,.6)),
- url('https://raw.githubusercontent.com/airnetcso/eps/main/image/bg1.jpg') center/cover no-repeat;
+/* ANIMASI & BODY - Mirip Koka */
+@keyframes fadeIn {
+  from { opacity: 0; transform: translateY(20px); }
+  to   { opacity: 1; transform: translateY(0); }
 }
-.login-container{
- width:90%;max-width:280px;padding:35px;text-align:center;
- background:rgba(255,255,255,.12);
- backdrop-filter:blur(6px);
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
 }
-.login-container h1,.login-container p{color:#fff}
-input{width:88%;padding:14px;margin:10px 0}
-button{width:100%;padding:16px;background:#3f51b5;color:#fff;border:none;font-weight:bold}
-/* QUIZ */
+body {
+  font-family: 'Segoe UI', system-ui, Arial, sans-serif;
+  min-height: 100vh;
+  background: url('https://raw.githubusercontent.com/airnetcso/eps/main/image/bg1.jpg') no-repeat center center fixed;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  color: #fff;
+  position: relative;
+}
+body::before {
+  content: '';
+  position: absolute;
+  inset: 0;
+  background: rgba(0, 0, 0, 0.3);
+  z-index: 1;
+}
+
+/* LOGIN PAGE - Mirip persis Koka */
+.login-container {
+  position: relative;
+  z-index: 2;
+  width: 80%;
+  max-width: 440px;
+  background: rgba(255,255,255,0.15);
+  backdrop-filter: blur(14px);
+  -webkit-backdrop-filter: blur(14px);
+  border-radius: 24px;
+  padding: 40px 30px;
+  box-shadow: 0 15px 40px rgba(0,0,0,0.35);
+  border: 1px solid rgba(255,255,255,0.18);
+  animation: fadeIn 0.8s ease-out;
+  margin-top: -100px;
+  text-align: center;
+}
+.login-container h1 {
+  font-size: 32px;
+  margin: 0 0 10px;
+  color: #fff;
+  font-weight: 700;
+  text-shadow: 0 2px 8px rgba(0,0,0,0.6);
+}
+.login-container p {
+  margin: 0 0 30px;
+  font-size: 18px;
+}
+input {
+  width: 100%;
+  padding: 16px;
+  margin: 14px 0;
+  font-size: 18px;
+  border: 2px solid rgba(255,255,255,0.4);
+  border-radius: 12px;
+  box-sizing: border-box;
+  background: rgba(255,255,255,0.12);
+  color: white;
+  transition: all 0.3s ease;
+}
+input::placeholder {
+  color: rgba(255,255,255,0.7);
+}
+input:focus {
+  border-color: #fff;
+  background: rgba(255,255,255,0.22);
+  outline: none;
+  box-shadow: 0 0 0 4px rgba(255,255,255,0.15);
+}
+button {
+  width: 100%;
+  padding: 16px;
+  margin: 16px 0 8px;
+  font-size: 20px;
+  font-weight: bold;
+  border: none;
+  border-radius: 12px;
+  color: white;
+  cursor: pointer;
+  background: linear-gradient(90deg, #10b981, #059669); /* Hijau seperti koka */
+  transition: all 0.3s ease;
+}
+button:hover {
+  transform: translateY(-3px);
+  box-shadow: 0 12px 25px rgba(16,185,129,0.4);
+}
+
+/* QUIZ & RESULT - Tetap PERSIS seperti baseline (nggak diubah) */
 #quiz-page{display:none;min-height:100vh;padding:70px 0;background:linear-gradient(#fdf6ec,#f7efe2)}
 .header-fixed{
  position:fixed;top:0;width:100%;display:flex;gap:6px;
@@ -53,7 +135,6 @@ button{width:100%;padding:16px;background:#3f51b5;color:#fff;border:none;font-we
 .nav-bottom button{flex:1;padding:12px;color:#fff;border:none;font-weight:bold}
 #prev{background:#2196f3}
 #next{background:#ff9800}
-/* RESULT */
 #result-page{display:none;max-width:600px;margin:auto;padding:20px}
 .result-box{background:#fff;border:2px solid #ddd;padding:20px}
 .wrong-item{
@@ -67,18 +148,21 @@ button{width:100%;padding:16px;background:#3f51b5;color:#fff;border:none;font-we
 }
 </style>
 </head>
+
 <body>
-<div id="login-page">
- <div class="login-container">
- <h1>LATIHAN SOAL</h1>
- <h1>한국어연습</h1>
- <p>25 Soal | 50 Menit</p>
- <input id="username" placeholder="Username / 이름">
- <input id="password" type="password" placeholder="Password / 비밀번호">
- <input id="kode" placeholder="Kode Soal / 시험코드">
- <button id="btnLogin">LOGIN / 로그인</button>
- </div>
+
+<!-- LOGIN PAGE - Mirip persis Koka -->
+<div class="login-container" id="login-page">
+  <h1>LATIHAN SOAL</h1>
+  <h1>한국어연습</h1>
+  <p>25 Soal | 50 Menit</p>
+  <input id="username" placeholder="Username / 이름" autocomplete="off">
+  <input id="password" type="password" placeholder="Password / 비밀번호" autocomplete="off">
+  <input id="kode" placeholder="Kode Soal / 시험코드" autocomplete="off">
+  <button id="btnLogin">LOGIN / 로그인</button>
 </div>
+
+<!-- QUIZ PAGE (tetap seperti baseline) -->
 <div id="quiz-page">
  <div class="header-fixed">
  <div class="submit-top" id="submitTop">SUBMIT</div>
@@ -90,9 +174,12 @@ button{width:100%;padding:16px;background:#3f51b5;color:#fff;border:none;font-we
  <button id="next">NEXT</button>
  </div>
 </div>
+
+<!-- RESULT PAGE -->
 <div id="result-page">
  <div class="result-box" id="resultBox"></div>
 </div>
+
 <script>
 document.addEventListener("DOMContentLoaded",()=>{
 const loginPage=document.getElementById("login-page");
@@ -103,6 +190,7 @@ const submitTop=document.getElementById("submitTop");
 const quizForm=document.getElementById("quiz-form");
 const timerEl=document.getElementById("timer");
 const resultBox=document.getElementById("resultBox");
+
 const validCredentials={
  "uus":"123","user01":"12345","hanarizka":"Nungkihana24!","user3":"12345","siswa01":"12345",
  "windi":"Windi2000","rismaya97":"bahasakorea","admin":"admin123","Fikrisurya":"464646",
@@ -117,12 +205,15 @@ const kodeMapping={
  "H66633":"soal5.json"
 };
 const BASE="https://raw.githubusercontent.com/airnetcso/latbakor/main/soal/";
+
 let questions=[],answers=[],current=0,time=3000,interval;
 let currentUser="", currentKode="";
+
 btnLogin.onclick=()=>{
  const u=document.getElementById("username").value.trim();
  const p=document.getElementById("password").value.trim();
  const k=document.getElementById("kode").value.trim().toUpperCase();
+
  if(validCredentials[u]===p && kodeMapping[k]){
   currentUser = u;
   currentKode = k;
@@ -134,6 +225,7 @@ btnLogin.onclick=()=>{
   alert("Username / Password / Kode salah");
  }
 };
+
 async function loadSoal(file){
  questions=await (await fetch(BASE+file)).json();
  answers=Array(questions.length).fill(null);
@@ -160,6 +252,7 @@ async function loadSoal(file){
  });
  show(0);
 }
+
 function show(n){
  document.querySelectorAll("audio").forEach(a=>{a.pause();a.currentTime=0});
  document.querySelectorAll(".question-wrapper").forEach((q,i)=>q.classList.toggle("active",i===n));
@@ -167,12 +260,15 @@ function show(n){
 }
 document.getElementById("prev").onclick=()=>current>0&&show(current-1);
 document.getElementById("next").onclick=()=>current<questions.length-1&&show(current+1);
+
 submitTop.onclick=()=>{
  const kosong=answers.findIndex(a=>a===null);
  if(kosong!==-1){alert("Soal "+(kosong+1)+" belum dijawab");show(kosong);return;}
+
  clearInterval(interval);
  quizPage.style.display="none";
  resultPage.style.display="block";
+
  let score=0,html="";
  questions.forEach((q,i)=>{
   const benar=q.answer;
@@ -184,7 +280,8 @@ submitTop.onclick=()=>{
    ${q.explanation||"-"}
    </div>`;
  });
- // === PENGIRIMAN NILAI KE ADMIN PUSAT (DIPERBAIKI & DIPERKUAT) ===
+
+ // === PENGIRIMAN NILAI KE ADMIN PUSAT (DIPERKUAT) ===
  const resultData = {
   username: currentUser,
   kode: currentKode || "-",
@@ -192,8 +289,10 @@ submitTop.onclick=()=>{
   tanggal: new Date().toLocaleString('id-ID'),
   app: "latbakor"
  };
+
  let allResults = JSON.parse(localStorage.getItem("quizResults") || "[]");
- // Check duplikat lebih ketat (termasuk waktu submit kurang dari 1 menit)
+
+ // Check duplikat lebih ketat
  const isDuplicate = allResults.some(r => 
   r.username === resultData.username &&
   r.kode === resultData.kode &&
@@ -201,21 +300,25 @@ submitTop.onclick=()=>{
   r.app === resultData.app &&
   Math.abs(new Date(r.tanggal) - new Date(resultData.tanggal)) < 60000
  );
+
  if (!isDuplicate) {
   allResults.push(resultData);
   localStorage.setItem("quizResults", JSON.stringify(allResults));
  }
+
  resultBox.innerHTML=`
   <h2>Nilai: ${score}</h2>
   ${html||"<p class='correct'>Semua jawaban benar 🎉</p>"}
   <div class="back-btn" onclick="location.reload()">KEMBALI</div>`;
 };
+
 function startTimer(){
  interval=setInterval(()=>{
   timerEl.textContent=String(Math.floor(time/60)).padStart(2,"0")+":"+String(time%60).padStart(2,"0");
   if(--time<0) submitTop.onclick();
  },1000);
 }
+
 });
 </script>
 </body>
